--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -15,7 +15,7 @@
                            class="form-control"
                            placeholder="Nombre del usuario">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('name')" class="form-text text-danger">
                         Debe de ser en formato de nombre y apellido
                     </span>
                 </div>
@@ -29,7 +29,7 @@
                            formControlName = "email"
                            class="form-control"
                            placeholder="Email del usuario">
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('email')" class="form-text text-danger">
                         mensaje de error del email
                     </span>
                 </div>
@@ -43,7 +43,7 @@
                           formControlName = "username"
                            class="form-control"
                            placeholder="Nombre código del usuario">
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('username')" class="form-text text-danger">
                          El username no puede ser Strider
                     </span>
                 </div>
@@ -58,7 +58,7 @@
                            class="form-control"
                            placeholder="Password de su cuenta">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('password')" class="form-text text-danger">
                          La contraseña debe de ser mayor de 6 caracteres.
                     </span>
                 </div>
@@ -73,7 +73,7 @@
                            class="form-control"
                            placeholder="Confirmar la contraseña">
 
-                    <span class="form-text text-danger">
+                    <span *ngIf="isValidField('password2')" class="form-text text-danger">
                          Las contraseñas deben de ser iguales
                     </span>
                 </div>
@@ -115,4 +115,4 @@
 <pre>{{ myForm.controls['password'].value | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ myForm.controls['password2'].value | json }}</pre>
+<pre>{{ myForm.controls['password2'].errors | json }}</pre>
